--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "backend": "nodemon main.js"
+    "backend": "nodemon ./main.js"
   },
   "author": "",
   "license": "ISC",
