--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "axios": "^1.7.9",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
