--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.1.1",
     "recoil": "^0.7.7"
   },
