--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-tailwind/react": "^2.1.10",
     "axios": "^1.7.9",
     "express": "^4.21.2",
+    "lucide-react": "^0.477.0",
     "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
